--- a/해야할일.md
+++ b/해야할일.md
@@ -1,4 +1,10 @@
-💡📢🚀📌💡 <ctrl+shift+k>
+<이모지 리스트>
+---
+<ctrl+shift+v>  
+💡🏆🎯📢🚀📌🚩📍🏁⚡💬⚠️ ✅☑️🔲 ❌   
+⏲️⏱️  
+
+(⏲️ : 0분)
 ---
 
 
@@ -16,67 +22,68 @@
 <BR>
 <BR>
 
-# 스트림릿.py
-- ### (검색패널)검색기능 구현 및 버튼에 기능 추가
-    - 📌브랜드, 아이템 라디오버튼 별 보여지는 화면 재배치
-      - 컬렉션이 준비되었는지 확인 (2-2_influencer_processing_data.json)
-    - 데이터 베이스는 어디인가?  
+# 🏆스트림릿.py
+- ### 📍(검색패널)검색기능 구현 및 버튼에 기능 추가
+    - 📌브랜드 검색시 키워드 추가 검색기능 넣기
+    - ~~브랜드, 아이템 라디오버튼 별 보여지는 화면 재배치 (⏲️ : 30분 씩 총 60분 >> ⚡26분 소요 완료)~~
+      - ~~컬렉션이 준비되었는지 확인 (2-2_influencer_processing_data.json)~~
+    - ~~데이터 베이스는 어디인가?~~  
     - ~~카테고리 퍼센트 입력 로직 추가~~
 
-- ### 데이터프레임 부분
-    - 보여지는 컬럼 배치 수정 
-        - 브랜드 라디오 버튼 별 보여지는 화면 재배치
-        - 아이템 라디오 버튼 별 보여지는 화면 재배치
+- ### 📍데이터프레임 부분
+    - ☑️ 행 삭제 기능 추가
+    - ☑️ 컨트롤 z 기능 추가 (복구기능)
+    - ~~보여지는 컬럼 배치 수정~~ 
+        - ~~브랜드 라디오 버튼 별 보여지는 화면 재배치~~
+        - ~~아이템 라디오 버튼 별 보여지는 화면 재배치~~
         - ~~인플루언서 라디오버튼 별 보여지는 화면 재배치~~
-    - 행 삭제 기능 추가
-    - 컨트롤 z 기능 추가 (복구)
-    - 클릭하면 링크 연결되게 하기
+    - ~~클릭하면 링크 연결되게 하기~~
 
 
 
-- ## 버튼 별 기능 추가
-    
-    ### 데이터 관리
-    - 시트 열기 
-        - 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
-    - 시트 동기화
+- ### 📍(사이드바) 버튼 별 기능 추가
+    - ~~디폴트 기본 닫힘 상태로 만들기~~
 
-    ### 데이터 분석
-    - 📌오늘의 아이템 찾기 [로직생각 필요] 1-3.py 수정하기
-    - 브랜드 추출 [로직생각 필요] 
-    - 브랜드 중복체크 [로직생각 필요]
-    - 아이템 중복체크 [로직생각 필요] 
-    - ~~오늘의 피드 [1-1 newwfeed 크롤링]~~
+        ### 데이터 관리
+        - 📌시트 열기 
+            - 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
+        - ☑️시트 동기화
 
-    ### SNS 분석
-    - 📌등급 분류 [로직생각 필요]
-    - ~~팔로잉 추출 [2-1 작업완료]~~
-    - ~~인플루언서 분석 [2-2 작업완료]~~
-    - ~~비전 분석 [2-3 작업완료]~~
-    
+        ### 데이터 분석
+        - 📌브랜드 추출 [로직생각 필요]  ? 이게 뭘 말하는지?
+        - 📌브랜드 중복체크 [로직생각 필요]
+        - 📌아이템 중복체크 [로직생각 필요] 
+        - ✅오늘의 피드 [1-1 newwfeed 크롤링]~~1-1.py 연결하기 (⏲️ : 30분)
 
-    ### DM 관리
-    - 📌DM팔로우시트 열기 [로직생각 필요]
-    - 📌DM보내기 [로직생각 필요]
-    - 팔로우하기 [로직생각 필요]
+        ### SNS 분석
+        - ☑️등급 분류 [로직생각 필요] (⏲️ : 30분)
+        - ✅팔로잉 추출 [2-1 작업완료]~~(⏲️ : 30분)
+        - ✅인플루언서 분석 [2-2 작업완료]~~(⏲️ : 30분)
+        - ✅비전 분석 [2-3 작업완료]~~(⏲️ : 30분)
+        
+
+        ### DM 관리
+        - ✅DM팔로우시트 열기 [로직생각 필요] (⏲️ : 30분)
+        - ✅DM보내기 [로직생각 필요] (⏲️ : 30분)
+        - 📌팔로우하기 [로직생각 필요]
 
 
 
 
-### - NEW 버튼, 설명서 버튼 추가
-    - 📌new버튼의 기능이 뭔지 확인
-    - 설명서는 마크다운으로 할까? -> good idea
-### - 엑셀저장 버튼
-    - 보여지는 데이터프레임 그대로 시트 저장 (몽고db는 그대로 유지)
+### - 📍NEW 버튼, 설명서 버튼 추가
+    - ✅new버튼의 기능이 뭔지 확인 (⏲️ : 20분)
+    - 📌설명서는 마크다운으로 할까? -> good idea
+### - 📍엑셀저장 버튼
+    - 📌보여지는 데이터프레임 그대로 시트 저장 (몽고db는 그대로 유지)
 
-### - 📌마이그레이션 완료하기
+### - ✅마이그레이션 완료하기 (⏲️ : 30분)
 <BR>
 <BR>
 
-# *1-2 크롤 파이썬 파일 수정
-    - 아이템카테고리 작동되게 하기 (필드추가)
-    - 아이템 유사도 까지 한 다음에 밸류 추가되게끔 (아이템 유사도 체크 기능 넣기)
-    - 브랜드명 정규화 기능
+# 🏆1-2 크롤 파이썬 파일 수정
+    - 📌 아이템카테고리 작동되게 하기 (필드추가)
+    - 📌아이템 유사도 까지 한 다음에 밸류 추가되게끔 (아이템 유사도 체크 기능 넣기)
+    - 📌브랜드명 정규화 기능
 <BR>
 <BR>
 
