사무실_css 마진조정, 버튼명, 1-2py 하드코딩

--- a/해야할일.md
+++ b/해야할일.md
@@ -6,6 +6,9 @@
 
 (⏲️ : 0분)
 ---
+✅ 1순위 업무
+📌 2순위 업무
+☑️ 3순위 업무
 
 
 🚀 20250223
@@ -14,10 +17,21 @@
 - 크롤링 몽고db에 오늘의 피드 쌓기
 - 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
 - 인플루언서 등급 분류 되어야함
-- dm 보내야함 (한시간에 10개)
-- 
+- dm 보내야함 (한시간에 10개)  
+<BR>
 
 
+---
+### 처리할일
+- ✅ 오늘의 아이템 찾기 (1-3_item_today.py) 분석 및 연동 끝내기 (⏲️ : 30분)
+- ✅new버튼의 기능이 뭔지 확인 (⏲️ : 20분)
+- ✅마이그레이션 완료하기 (⏲️ : 30분)
+- ✅시트 열기 (⏲️ : 20분)
+    - 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
+- ✅시트 동기화 (⏲️ : 20분)
+<BR>
+
+---
 <BR>
 <BR>
 <BR>
@@ -42,29 +56,36 @@
 
 
 - ### 📍(사이드바) 버튼 별 기능 추가
+    - 📌상단에 ID 셀렉박스 추가  
+    (텍스트파일에 디폴트 아이디 입력되어있음_  
+     스트림릿실행할때마다.
+     근데 셀렉박스가 바뀌면,   텍스트파일에도 아이디를 변경할 것)
+    - 📌맥에서도 실행 될지 확인할 것
     - ~~디폴트 기본 닫힘 상태로 만들기~~
 
         ### 데이터 관리
-        - 📌시트 열기 
+        - ✅시트 열기 
             - 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
-        - ☑️시트 동기화
+        - ✅시트 동기화
 
         ### 데이터 분석
-        - 📌브랜드 추출 [로직생각 필요]  ? 이게 뭘 말하는지?
+        - ✅ 오늘의 아이템 찾기 (1-3_item_today.py) 분석 및 연동 끝내기 (⏲️ : 30분)
         - 📌브랜드 중복체크 [로직생각 필요]
         - 📌아이템 중복체크 [로직생각 필요] 
-        - ✅오늘의 피드 [1-1 newwfeed 크롤링]~~1-1.py 연결하기 (⏲️ : 30분)
+        - ~~오늘의 피드 [1-1 newwfeed 크롤링]~~1-1.py 연결하기~~
+        - ~~브랜드 추출 [로직생각 필요]  ? 이게 뭘 말하는지? >> 클로드 분석을 말했던 것~~
 
         ### SNS 분석
-        - ☑️등급 분류 [로직생각 필요] (⏲️ : 30분)
-        - ✅팔로잉 추출 [2-1 작업완료]~~(⏲️ : 30분)
-        - ✅인플루언서 분석 [2-2 작업완료]~~(⏲️ : 30분)
-        - ✅비전 분석 [2-3 작업완료]~~(⏲️ : 30분)
+        - 📌등급 분류 [로직생각 필요] (⏲️ : 30분)
+        - ~~팔로잉 추출 [2-1 작업완료]~~
+        - ~~인플루언서 분석 [2-2 작업완료]~~
+        - ~~비전 분석 [2-3 작업완료]~~
         
 
         ### DM 관리
-        - ✅DM팔로우시트 열기 [로직생각 필요] (⏲️ : 30분)
-        - ✅DM보내기 [로직생각 필요] (⏲️ : 30분)
+        - 📌DM팔로우시트 열기 [로직생각 필요] (⏲️ : 30분)
+        - 📌DM보내기 [로직생각 필요] (⏲️ : 30분)
+        - 📌모달창을 통해 아이디 및 갯수, 횟수 입력? (2-1 같이)
         - 📌팔로우하기 [로직생각 필요]
 
 
@@ -81,7 +102,7 @@
 <BR>
 
 # 🏆1-2 크롤 파이썬 파일 수정
-    - 📌 아이템카테고리 작동되게 하기 (필드추가)
+    - 📌 아이템카테고리도 클로드가 분석해서 입력 및 추가되게 하기 (필드추가)
     - 📌아이템 유사도 까지 한 다음에 밸류 추가되게끔 (아이템 유사도 체크 기능 넣기)
     - 📌브랜드명 정규화 기능
 <BR>
