사무실_ 1-1파일 OOM에러 처리시도(세션마다 driverquit시도 제이슨 파일 테스트 필요)

--- a/해야할일.md
+++ b/해야할일.md
@@ -13,22 +13,22 @@
 
 🚀 20250223
 <BR>
-💡 월요일까지 필요한 것.
-- 크롤링 몽고db에 오늘의 피드 쌓기
+💡 월요일까지 필요할 것.
+- 크롤링 몽고db에 오늘의 피드 쌓기 > 마이그레이션
 - 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
 - 인플루언서 등급 분류 되어야함
-- dm 보내야함 (한시간에 10개)  
+- dm 보내야함 (한시간에 10개, 스레드 나눠서 처리?)  
 <BR>
 
 
 ---
 ### 처리할일
-- ✅ 오늘의 아이템 찾기 (1-3_item_today.py) 분석 및 연동 끝내기 (⏲️ : 30분)
-- ✅new버튼의 기능이 뭔지 확인 (⏲️ : 20분)
+- 
 - ✅마이그레이션 완료하기 (⏲️ : 30분)
 - ✅시트 열기 (⏲️ : 20분)
     - 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
 - ✅시트 동기화 (⏲️ : 20분)
+- ✅new버튼의 기능이 뭔지 확인 (⏲️ : 20분)
 <BR>
 
 ---
@@ -69,11 +69,12 @@
         - ✅시트 동기화
 
         ### 데이터 분석
-        - ✅ 오늘의 아이템 찾기 (1-3_item_today.py) 분석 및 연동 끝내기 (⏲️ : 30분)
+        - 
         - 📌브랜드 중복체크 [로직생각 필요]
         - 📌아이템 중복체크 [로직생각 필요] 
         - ~~오늘의 피드 [1-1 newwfeed 크롤링]~~1-1.py 연결하기~~
         - ~~브랜드 추출 [로직생각 필요]  ? 이게 뭘 말하는지? >> 클로드 분석을 말했던 것~~
+        - ~~오늘의 아이템 찾기 (1-3_item_today.py) 분석 및 연동 끝내기~~
 
         ### SNS 분석
         - 📌등급 분류 [로직생각 필요] (⏲️ : 30분)
@@ -108,6 +109,19 @@
 <BR>
 <BR>
 
+# 🏆추가 작업사항
+### 📍샘플 데이터 관리
+- 📌 올려야할 샘플 확인
+    - 브랜드딕셔너리 제이슨 >> 몽고db에 변환하기? 지금 올리면 하나의 도큐먼트로 올라감
+
+
+### 📍예상되는 에러 대응
+- ☑️ 1-1 세션txt 입력되는 결과 업데이트 필요
+- ☑️ 1-1파일 동시 입력상황에서 총 갯수 출력 정확성 확인
+- ☑️ 크롤링 시 메모리 에러 문제 해결 (리오픈 케이스)
+
+### 📍공통 사항
+- ☑️ 백업파일 관리 방안 수립
 
 <details>
   <summary>이전 내역 클릭해서 펼치기</summary>
