사무실_업무종료_해야할일정리.

--- a/해야할일.md
+++ b/해야할일.md
@@ -2,7 +2,7 @@
 ---
 <ctrl+shift+v>  
 💡🏆🎯📢🚀📌🚩📍🏁⚡💬⚠️ ✅☑️🔲 ❌   
-⏲️⏱️  
+⏳⏲️⏱️  
 
 (⏲️ : 0분)
 ---
@@ -15,7 +15,7 @@
 <BR>
 💡 월요일까지 필요할 것.
 - 크롤링 몽고db에 오늘의 피드 쌓기 > 마이그레이션
-- 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
+- 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다? > 따로 몽고db가지고 파일을 만들지?
 - 인플루언서 등급 분류 되어야함
 - dm 보내야함 (한시간에 10개, 스레드 나눠서 처리?)  
 <BR>
@@ -23,11 +23,13 @@
 
 ---
 ### 처리할일
-- 
 - ✅마이그레이션 완료하기 (⏲️ : 30분)
+    - 컬렉션 이름들 변경하기 [안한게 있나?] > 최종테스트하기
+    - 마이그레이션 할때 각 몽고크롤파일들과 제이슨 파일간의 인덱스들 잘 확인하기 (⏲️ : 30분)
 - ✅시트 열기 (⏲️ : 20분)
     - 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
 - ✅시트 동기화 (⏲️ : 20분)
+- ✅아이템 유사도 체크 기능 넣기 (⏲️ : 20분)
 - ✅new버튼의 기능이 뭔지 확인 (⏲️ : 20분)
 <BR>
 
@@ -102,12 +104,19 @@
 <BR>
 <BR>
 
-# 🏆1-2 크롤 파이썬 파일 수정
-    - 📌 아이템카테고리도 클로드가 분석해서 입력 및 추가되게 하기 (필드추가)
-    - 📌아이템 유사도 까지 한 다음에 밸류 추가되게끔 (아이템 유사도 체크 기능 넣기)
-    - 📌브랜드명 정규화 기능
+# 🏆1-2 클로드 크롤 파이썬 파일 수정
+- 📌 아이템카테고리도 클로드가 분석해서 입력 및 추가되게 하기 (필드추가)
+- 📌아이템 유사도 까지 한 다음에 밸류 추가되게끔 (아이템 유사도 체크 기능 넣기가 가능한가?)
+- 📌브랜드명 정규화 기능
 <BR>
 <BR>
+
+# 🏆3-1, 2 브랜드, 아이템유사도 파일 수정
+- ✅로직파악하기 
+- ✅브랜드 정규화의 경우 1-2에서 1차로 추출한걸 바로 브랜드딕제이슨에서 처리한 뒤 입력하게끔
+    - 1차로 클로드가 추출(제이슨형태)한 것을 gpt4 mini 혹은 무료 api로 대표명을 찾기. 
+    - 찾을 때, 20개씩 비교해서 찾기? 클로드 입력이 너무 늦어지는가? 
+    - 유사도가 애매한 것들은 로그를 남겨서 사람이 검수, done 처리
 
 # 🏆추가 작업사항
 ### 📍샘플 데이터 관리
@@ -118,10 +127,12 @@
 ### 📍예상되는 에러 대응
 - ☑️ 1-1 세션txt 입력되는 결과 업데이트 필요
 - ☑️ 1-1파일 동시 입력상황에서 총 갯수 출력 정확성 확인
-- ☑️ 크롤링 시 메모리 에러 문제 해결 (리오픈 케이스)
+- ⚠️ 크롤링 시 메모리 에러 문제 해결 (리오픈 케이스 oom 코드 수정해뒀는데 대기중)
 
 ### 📍공통 사항
 - ☑️ 백업파일 관리 방안 수립
+- ☑️ 브랜드 정규화 로직 다시 생각하기
+- ☑️ 몽고db 컬렉션 이름 변경하기
 
 <details>
   <summary>이전 내역 클릭해서 펼치기</summary>
