--- a/해야할일.md
+++ b/해야할일.md
@@ -3,21 +3,47 @@
 <ctrl+shift+v>  
 💡🏆🎯📢🚀📌🚩📍🏁⚡💬⚠️ ✅☑️🔲 ❌   
 ⏳⏲️⏱️  
-
+⬅️➡️ ⬆️⬇️  ◀️▶️ 🔼🔽 
 (⏲️ : 0분)
 ---
 ✅ 1순위 업무
 📌 2순위 업무
 ☑️ 3순위 업무
 
+몽고db :
+https://cloud.mongodb.com/v2/67b53ffbba89e066f00516de#/metrics/replicaSet/67b540e4a89b973ad2a8cd52/explorer/insta09_database
 
+cd C:\Users\USER\Desktop\github\insta_vendor && python 1-1_newfeed_crawl.py
+
+<details>
+  <summary>시나리오</summary>
+    - 
+    
+    1. 뉴피드 크롤을 한다. ⚠️테스트중⚠️1-1 프로그램 메모리 에러 ood ➡️ 터미널킬버전 & 일반 세션횟수 조정버전 *조정버전 테스트 중
+    2. 클로드 분석을 한다.
+    3. 아이템 투데이를 한다. ⚠️ 스트림릿_ 아이템투데이 보여지는 데이터프레임 칼럼수정 
+    4. 아이템 투데이를 보고 연락할 브랜드를 정한다. ⚠️ 데이터 필터 및, ☑️ 전화번호 몽고db에 입력기능 필요
+    5. 브랜드 연락처를 찾는다. ⚠️ 협업가능하게 스프레드시트로 공유해야할지?
+    6. 브랜드에 전화를 돌린다. ⚠️ 전화번호
+    7. 제안서 메일을 보낸다. ☑️ 자동 메일 기능 필요
+    8. 어떤 인플들에게 보낼지 분석한다.
+    9. DM을 보낸다. ☑️자동 DM기능 필요
+    10. 정산해준다. 끝
+  </details>
+<br>
+<br>
 🚀 20250223
 <BR>
-💡 월요일까지 필요할 것.
+💡 수요일까지 필요할 것.
+
 - ⚠️크롤링 몽고db에 오늘의 피드 쌓기 > 마이그레이션
+- ⚠️⚠️⚠️크롤링 시 메모리 에러 문제 해결 (리오픈 케이스 oom 코드 수정해뒀는데 대기중)⚠️⚠️⚠️
+
 - ⚠️전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다? > 따로 몽고db가지고 파일을 만들지?
 - ⚠️인플루언서 등급 분류 되어야함
 - ⚠️dm 보내야함 (한시간에 10개, 스레드 나눠서 처리?)  
+
+
 <BR>
 
 
@@ -26,11 +52,9 @@
 - ✅마이그레이션 완료하기 (⏲️ : 30분)
     - 컬렉션 이름들 변경하기 [안한게 있나?] > 최종테스트하기
     - 마이그레이션 할때 각 몽고크롤파일들과 제이슨 파일간의 인덱스들 잘 확인하기 (⏲️ : 30분)
-- ✅시트 열기 (⏲️ : 20분)
-    - 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
+- ✅ 전화를 해야됨 (연락처) >> 시트를 연다 연락처 입력할 수 있도록 한다?
+- ✅ 아이템 유사도 체크 기능 넣기 1-2에 추가하기?(⏲️ : 20분)
 
-- ✅아이템 유사도 체크 기능 넣기? (⏲️ : 20분)
-- ✅아이템 유사도 체크 기능 넣기 1-2에 추가하기?(⏲️ : 20분)
 
 <BR>
 
@@ -41,22 +65,13 @@
 
 # 🏆스트림릿.py
 - ### 📍(검색패널)검색기능 구현 및 버튼에 기능 추가
-    - 📌브랜드 검색시 키워드 추가 검색기능 넣기
-    - ~~브랜드, 아이템 라디오버튼 별 보여지는 화면 재배치 (⏲️ : 30분 씩 총 60분 >> ⚡26분 소요 완료)~~
-      - ~~컬렉션이 준비되었는지 확인 (2-2_influencer_processing_data.json)~~
-    - ~~데이터 베이스는 어디인가?~~  
-    - ~~카테고리 퍼센트 입력 로직 추가~~
+    - ☑️브랜드 검색시 키워드 추가 검색기능 넣기
+
 
 - ### 📍데이터프레임 부분
     - 📌 메모 및 전화번호 입력 기능 > 몽고에 업뎃되게?
     - ☑️ 행 삭제 기능 추가
     - ☑️ 컨트롤 z 기능 추가 (복구기능)
-    - ~~보여지는 컬럼 배치 수정~~ 
-        - ~~브랜드 라디오 버튼 별 보여지는 화면 재배치~~
-        - ~~아이템 라디오 버튼 별 보여지는 화면 재배치~~
-        - ~~인플루언서 라디오버튼 별 보여지는 화면 재배치~~
-    - ~~클릭하면 링크 연결되게 하기~~
-
 
 
 - ### 📍(사이드바) 버튼 별 기능 추가
@@ -66,7 +81,6 @@
      스트림릿실행할때마다.
      근데 셀렉박스가 바뀌면,   텍스트파일에도 아이디를 변경할 것)
     - 📌맥에서도 실행 될지 확인할 것
-    - ~~디폴트 기본 닫힘 상태로 만들기~~
 
         ### 데이터 관리
         - ✅시트 열기 
@@ -76,15 +90,10 @@
         ### 데이터 분석
         - ~~📌브랜드 중복체크 버튼 삭제
         - ~~📌아이템 중복체크 버튼 삭제
-        - ~~오늘의 피드 [1-1 newwfeed 크롤링]~~1-1.py 연결하기~~
-        - ~~브랜드 추출 [로직생각 필요]  ? 이게 뭘 말하는지? >> 클로드 분석을 말했던 것~~
-        - ~~오늘의 아이템 찾기 (1-3_item_today.py) 분석 및 연동 끝내기~~
 
         ### SNS 분석
         - 📌등급 분류 [로직생각 필요] (⏲️ : 30분)
-        - ~~팔로잉 추출 [2-1 작업완료]~~
-        - ~~인플루언서 분석 [2-2 작업완료]~~
-        - ~~비전 분석 [2-3 작업완료]~~
+
         
 
         ### DM 관리
@@ -92,49 +101,41 @@
         - 📌DM보내기 [로직생각 필요] (⏲️ : 30분)
         - 📌모달창을 통해 아이디 및 갯수, 횟수 입력? (2-1 같이)
         - 📌팔로우하기 [로직생각 필요]
-         - ~~DM팔로우시트 열기~~
+
 
 
 
 
 ### - 📍NEW 버튼, 설명서 버튼 추가
-    - ✅new버튼의 기능이 뭔지 확인 (⏲️ : 20분)
-    - 📌설명서는 마크다운으로 할까? -> good idea
+    - 📌설명서는 마크다운으로 할까? -> good idea 음 편집기가 열려야 보여지지 않나? 미리보기로 열까?
 ### - 📍엑셀저장 버튼
-    - 📌보여지는 데이터프레임 그대로 시트 저장 (몽고db는 그대로 유지)
+    - ✅ 보여지는 데이터프레임 그대로 시트 저장 (몽고db는 그대로 유지)
 
 ### - ✅마이그레이션 완료하기 (⏲️ : 30분)
 <BR>
 <BR>
 
 # 🏆1-2 클로드 크롤 파이썬 파일 수정
-- 📌 아이템카테고리도 클로드가 분석해서 입력 및 추가되게 하기 (필드추가)
-- 📌아이템 유사도 까지 한 다음에 밸류 추가되게끔 (아이템 유사도 체크 기능 넣기가 가능한가?)
-- 📌브랜드명 정규화 기능
+- 📌아이템 유사도의 코드도 합치는거 구현
+
 <BR>
 <BR>
 
-# 🏆3-1, 2 브랜드, 아이템유사도 파일 수정
+# 🏆3-2 아이템유사도 파일 수정
 - ✅아이템유사도 어떻게 처리할지.
-- ~~브랜드 정규화의 경우 1-2에서 1차로 추출한걸 바로 브랜드딕제이슨에서 처리한 뒤 입력하게끔~~
-    - ~~1차로 클로드가 추출(제이슨형태)한 것을 gpt4 mini 혹은 무료 api로 대표명을 찾기.~~
-    - ~~찾을 때, 20개씩 비교해서 찾기? 클로드 입력이 너무 늦어지는가?~~
-    - ~~유사도가 애매한 것들은 로그를 남겨서 사람이 검수, done 처리~~
+
 
 # 🏆추가 작업사항
 ### 📍샘플 데이터 관리
-- 📌 올려야할 샘플 확인
-    - ~~브랜드딕셔너리 제이슨 >> 몽고db에 변환하기? 지금 올리면 하나의 도큐먼트로 올라감~~
+
 
 
 ### 📍예상되는 에러 대응
-- ☑️ 1-1 세션txt 입력되는 프린트 결과 업데이트 필요
 - ☑️ 1-1파일 동시 입력상황에서 총 갯수 출력 정확성 확인
 - ⚠️ 크롤링 시 메모리 에러 문제 해결 (리오픈 케이스 oom 코드 수정해뒀는데 대기중)
 
 ### 📍공통 사항
 - ☑️ 백업파일 관리 방안 수립
-- ~~브랜드 정규화 로직 다시 생각하기~~
 - ☑️ 몽고db 컬렉션 이름 하드코딩 변경하기
 
 <details>
