집_ 1-1_세션 조절, 메모리 충돌 해결_5일 이상 게시물 5회로 줄여뒀는데 수정하기. 일수 혹은 횟수 변경

--- a/해야할일.md
+++ b/해야할일.md
@@ -13,13 +13,20 @@
 몽고db :
 https://cloud.mongodb.com/v2/67b53ffbba89e066f00516de#/metrics/replicaSet/67b540e4a89b973ad2a8cd52/explorer/insta09_database
 
+stremalit : streamlit run 0-0_streamlit_gui.py
+
+사무실 :
 cd C:\Users\USER\Desktop\github\insta_vendor && python 1-1_newfeed_crawl.py
+
+성남집 :
+cd C:\Users\TS\Desktop\git_code\insta_vendor_home && python 1-1_newfeed_crawl.py
 
 <details>
   <summary>시나리오</summary>
     - 
-    
-    1. 뉴피드 크롤을 한다. ⚠️테스트중⚠️1-1 프로그램 메모리 에러 ood ➡️ 터미널킬버전 & 일반 세션횟수 조정버전 *조정버전 테스트 중
+    0. 세팅은 끝났나? : ⚠️ 마이그레이션 하기 전 json 파일 브랜드 및 아이템 merged
+    메모: 브랜드 중복처리할 때, 헤세드터블을 선택 후 터블로 변경하면 어디어디가 바껴야하나?
+    1. 뉴피드 크롤을 한다. ⚠️테스트중⚠️1-1 프로그램 메모리 에러 ood ➡️ 터미널킬버전 & 일반 세션횟수 조정버전 // *조정버전 테스트 중
     2. 클로드 분석을 한다.
     3. 아이템 투데이를 한다. ⚠️ 스트림릿_ 아이템투데이 보여지는 데이터프레임 칼럼수정 
     4. 아이템 투데이를 보고 연락할 브랜드를 정한다. ⚠️ 데이터 필터 및, ☑️ 전화번호 몽고db에 입력기능 필요
